--- a/.github/workflows/code_stats.yml
+++ b/.github/workflows/code_stats.yml
@@ -40,25 +40,6 @@ jobs:
           powershell -Command '$PSVersionTable'
 
       # Runs PowerShell script
-      - name: Powershell_version
-        run: |
-          echo Add other actions to build,
-          powershell -File ${env:GITHUB_WORKSPACE}\.github\scripts\scripts.ps1
-      
-      # setup-docker
-      - name: setup-docker
-        # You may pin to the exact commit or the version.
-        # uses: docker-practice/actions-setup-docker@51fd5009666ea5e3382fe125abf5d73d31386b59
-        uses: docker-practice/actions-setup-docker@1.0.8
-        with:
-          # Docker Version
-          docker_version: 20.10
-          # Docker nightly Version
-          docker_nightly_version: snapshot-20210202
-          # Docker Channel
-          docker_channel: stable
-          # Enable Buildx
-          docker_buildx: true
-          # docker cli experimental
-          docker_cli_experimental: enabled
-          # /etc/docker/daemon.json
+      - name: Powershell_Script
+        run: powershell -File ${env:GITHUB_WORKSPACE}\.github\scripts\scripts.ps1
+        shell: powershell
